[gd_scene load_steps=8 format=3 uid="uid://xuxkmtc4blfe"]

[ext_resource type="PackedScene" uid="uid://pbmyh1qru7p" path="res://characters/happy_boo/happy_boo.tscn" id="1_4flbx"]
[ext_resource type="Script" uid="uid://cd8loxwqycsan" path="res://player.gd" id="1_onrkg"]
[ext_resource type="PackedScene" uid="uid://cgth67r24cm3f" path="res://gun.tscn" id="3_i3pqv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_onrkg"]
radius = 28.0179

[sub_resource type="CircleShape2D" id="CircleShape2D_i3pqv"]
radius = 33.0151

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i3pqv"]
bg_color = Color(0.152941, 0.168627, 0.188235, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hqtel"]
bg_color = Color(4.52429e-06, 0.815981, 0.590314, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="player" type="CharacterBody2D"]
script = ExtResource("1_onrkg")

[node name="HappyBoo" parent="." instance=ExtResource("1_4flbx")]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_onrkg")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="gun" parent="." instance=ExtResource("3_i3pqv")]
position = Vector2(0, -45)

[node name="hurtbox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
shape = SubResource("CircleShape2D_i3pqv")
debug_color = Color(0.74626, 0.40812, 0.577544, 0.42)

[node name="ProgressBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -129.0
offset_top = -138.0
offset_right = 130.0
offset_bottom = -111.0
theme_override_styles/background = SubResource("StyleBoxFlat_i3pqv")
theme_override_styles/fill = SubResource("StyleBoxFlat_hqtel")
value = 100.0
show_percentage = false

[node name="level_up_label" type="Label" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color(0, 0, 0, 1)
offset_left = -127.0
offset_top = -168.0
offset_right = -62.0
offset_bottom = -145.0
text = "level up!"

[node name="level_up_timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
one_shot = true
